RESOLVED FIXED171092
LayoutTest webrtc/datachannel/datachannel-event.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=171092
Summary LayoutTest webrtc/datachannel/datachannel-event.html is a flaky crash
Ryan Haddad
Reported 2017-04-20 17:19:18 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x0000000116890e6c WTF::Vector<std::__1::reference_wrapper<WebCore::RTCPeerConnection>, 0ul, WTF::CrashOnOverflow, 16ul>::size() const + 12 (Vector.h:647) 1 com.apple.WebCore 0x0000000116890ad1 bool WTF::Vector<std::__1::reference_wrapper<WebCore::RTCPeerConnection>, 0ul, WTF::CrashOnOverflow, 16ul>::removeFirstMatching<WebCore::RTCController::remove(WebCore::RTCPeerConnection&)::$_0>(WebCore::RTCController::remove(WebCore::RTCPeerConnection&)::$_0 const&) + 49 (Vector.h:1402) 2 com.apple.WebCore 0x0000000116890a88 WebCore::RTCController::remove(WebCore::RTCPeerConnection&) + 40 (RTCController.cpp:40) 3 com.apple.WebCore 0x000000011689cc15 WebCore::RTCPeerConnection::unregisterFromController() + 37 (RTCPeerConnection.cpp:421) 4 com.apple.WebCore 0x000000011689cb9b WebCore::RTCPeerConnection::doStop() + 91 (RTCPeerConnection.cpp:402) 5 com.apple.WebCore 0x000000011689df91 WebCore::RTCPeerConnection::close()::$_3::operator()(WebCore::ScriptExecutionContext&) const + 33 (RTCPeerConnection.cpp:376) 6 com.apple.WebCore 0x000000011689dee7 WTF::Function<void (WebCore::ScriptExecutionContext&)>::CallableWrapper<WebCore::RTCPeerConnection::close()::$_3>::call(WebCore::ScriptExecutionContext&) + 55 (Function.h:89) 7 com.apple.WebCore 0x00000001149db797 WTF::Function<void (WebCore::ScriptExecutionContext&)>::operator()(WebCore::ScriptExecutionContext&) const + 119 (Function.h:50) 8 com.apple.WebCore 0x00000001149cb07d WebCore::ScriptExecutionContext::Task::performTask(WebCore::ScriptExecutionContext&) + 29 (ScriptExecutionContext.h:165) 9 com.apple.WebCore 0x00000001149c23d1 WebCore::Document::postTask(WebCore::ScriptExecutionContext::Task&&)::$_2::operator()() + 289 (Document.cpp:5372) 10 com.apple.WebCore 0x00000001149c21ec WTF::Function<void ()>::CallableWrapper<WebCore::Document::postTask(WebCore::ScriptExecutionContext::Task&&)::$_2>::call() + 28 (Function.h:89) 11 com.apple.JavaScriptCore 0x000000010cba48a3 WTF::Function<void ()>::operator()() const + 99 (Function.h:50) 12 com.apple.JavaScriptCore 0x000000010cba3ffd WTF::dispatchFunctionsFromMainThread() + 301 (MainThread.cpp:136) 13 com.apple.JavaScriptCore 0x000000010cba6361 WTF::timerFired(__CFRunLoopTimer*, void*) + 49 (MainThreadMac.mm:109) 14 com.apple.CoreFoundation 0x00007fff9b7a0af4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20 15 com.apple.CoreFoundation 0x00007fff9b7a0783 __CFRunLoopDoTimer + 1075 16 com.apple.CoreFoundation 0x00007fff9b7a02da __CFRunLoopDoTimers + 298 17 com.apple.CoreFoundation 0x00007fff9b7977d1 __CFRunLoopRun + 1841 18 com.apple.CoreFoundation 0x00007fff9b796e38 CFRunLoopRunSpecific + 296 19 DumpRenderTree 0x000000010b165603 runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 6339 (DumpRenderTree.mm:2022) 20 DumpRenderTree 0x000000010b163c8d runTestingServerLoop() + 333 (DumpRenderTree.mm:1177) 21 DumpRenderTree 0x000000010b163212 dumpRenderTree(int, char const**) + 450 (DumpRenderTree.mm:1279) 22 DumpRenderTree 0x000000010b16601d DumpRenderTreeMain(int, char const**) + 125 (DumpRenderTree.mm:1394) 23 DumpRenderTree 0x000000010b1dfb22 main + 34 (DumpRenderTreeMain.mm:34) 24 libdyld.dylib 0x00007fffa14af5ad start + 1 https://build.webkit.org/results/Apple%20El%20Capitan%20Debug%20WK1%20(Tests)/r215582%20(687)/results.html https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=webrtc%2Fdatachannel%2Fdatachannel-event.html
Attachments
Patch (5.76 KB, patch)
2017-04-27 11:59 PDT, youenn fablet
no flags
Patch for landing (5.75 KB, patch)
2017-04-27 12:29 PDT, youenn fablet
no flags
Ryan Haddad
Comment 1 2017-04-20 17:21:41 PDT
This commit was a few revisions before the
Radar WebKit Bug Importer
Comment 2 2017-04-20 17:22:02 PDT
Ryan Haddad
Comment 3 2017-04-20 17:25:11 PDT
(In reply to Ryan Haddad from comment #1) > This commit was a few revisions before the Didn't mean to save this. I don't know if this is a regression or not. The test was added with https://trac.webkit.org/r214627.
youenn fablet
Comment 4 2017-04-27 11:59:00 PDT
youenn fablet
Comment 5 2017-04-27 12:29:59 PDT
Created attachment 308427 [details] Patch for landing
WebKit Commit Bot
Comment 6 2017-04-27 15:58:47 PDT
Comment on attachment 308427 [details] Patch for landing Clearing flags on attachment: 308427 Committed r215901: <http://trac.webkit.org/changeset/215901>
WebKit Commit Bot
Comment 7 2017-04-27 15:58:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.